--- a/http/templates/index.html
+++ b/http/templates/index.html
@@ -1,15 +1,18 @@
 <html>
     <head>
         <title>Talks</title>
+        <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
-        <h1>Talks</h1>
-        <ul>
-            {{range .}}
-                <li>[{{ .ID }}] {{ .Name }}</li>
-            {{else}}
-                <p>No talks found</p>
-            {{end}}
-        </ul>
+        <div class="container">
+            <h1>Talks</h1>
+            <ul>
+                {{range .}}
+                    <li>[{{ .ID }}] {{ .Name }}</li>
+                {{else}}
+                    <p>No talks found</p>
+                {{end}}
+            </ul>
+        </div>
     </body>
 </html>
