--- a/src/front-style/src/_variables.scss
+++ b/src/front-style/src/_variables.scss
@@ -1,2 +1,7 @@
-$font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-$max-width: 900px;
+html {
+  --color-primary: lightblue;
+  --color-text: black;
+  --color-background: whitesmoke;
+  --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  --max-width: 900px;
+}
