--- a/src/front-style/src/main.scss
+++ b/src/front-style/src/main.scss
@@ -2,4 +2,6 @@
 @import "global";
 @import "components/container";
 @import "components/navbar";
+@import "components/body";
+@import "components/footer";
 @import "components/talk-list";
