--- a/src/front-style/src/_variables.scss
+++ b/src/front-style/src/_variables.scss
@@ -1,7 +1,13 @@
 html {
-  --color-primary: lightblue;
+  --color-primary: #542836;
+  --color-accent: #d09c2e;
+
+  --background-color: #eeeced;
+
+  --header-text-color: white;
+
   --color-text: black;
-  --color-background: whitesmoke;
-  --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  --max-width: 900px;
+  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --max-width: 800px;
+  --navbar-height: 60px;
 }
