Add meta charset

--- a/src/web/templates/files/index.html
+++ b/src/web/templates/files/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Talks</title>
+        <meta charset="utf8">
         <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
