--- a/src/web/templates/files/index.html
+++ b/src/web/templates/files/index.html
@@ -1,48 +1,23 @@
-<html>
-    <head>
-        <title>Talks</title>
-        <meta charset="utf8">
-        <link rel="stylesheet" href="/assets/style.css">
-    </head>
-    <body>
+{{define "content"}}
 
-        <header class="x-header">
-            <div class="x-container">
-                <h1 class="x-header-title">Gonference</h1>
+<div class="x-talk-list">
+    {{range .}}
+        <a class="x-talk-list-item" href="#">
+
+            <div class="x-talk-list-item-arrow">
+                {{ template "icons/chevron-right" }}
             </div>
-        </header>
 
-        <div class="x-body">
-            <div class="x-container">
-                <div class="x-talk-list">
-                    {{range .}}
-                        <a class="x-talk-list-item" href="#">
-
-                            <div class="x-talk-list-item-arrow">
-                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129">
-                                    <g>
-                                        <path d="m40.4,121.3c-0.8,0.8-1.8,1.2-2.9,1.2s-2.1-0.4-2.9-1.2c-1.6-1.6-1.6-4.2 0-5.8l51-51-51-51c-1.6-1.6-1.6-4.2 0-5.8 1.6-1.6 4.2-1.6 5.8,0l53.9,53.9c1.6,1.6 1.6,4.2 0,5.8l-53.9,53.9z"></path>
-                                    </g>
-                                </svg>
-                            </div>
-
-                            <h3 class="x-talk-list-item-title" data-id="{{ .ID }}">{{ .Name }}</h3>
-                            <div class="x-talk-list-item-info">
-                                <span class="x-talk-list-item-speaker">{{ .SpeakerName }}</span>
-                                <span class="x-talk-list-item-track">{{ .Track }}</span>
-                                <span class="x-talk-list-item-hour">{{ .When.Format "15:04" }}</span>
-                            </div>
-                        </a>
-                    {{else}}
-                        <p>No talks found</p>
-                    {{end}}
-                </div>
+            <h3 class="x-talk-list-item-title" data-id="{{ .ID }}">{{ .Name }}</h3>
+            <div class="x-talk-list-item-info">
+                <span class="x-talk-list-item-speaker">{{ .SpeakerName }}</span>
+                <span class="x-talk-list-item-track">{{ .Track }}</span>
+                <span class="x-talk-list-item-hour">{{ .When.Format "15:04" }}</span>
             </div>
-        </div>
+        </a>
+    {{else}}
+        <p>No talks found</p>
+    {{end}}
+</div>
 
-        <footer class="x-footer">
-            <span>Gonference 2019</span>
-        </footer>
-
-    </body>
-</html>
+{{end}}
