Talk template. Some changes on templates. Add parametrizable title.

--- a/src/web/templates/files/_layout.html
+++ b/src/web/templates/files/_layout.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Talks</title>
+    <title>{{template "title" .}}</title>
     <meta charset="utf8">
     <link rel="stylesheet" href="/assets/style.css">
 </head>
@@ -10,7 +10,7 @@
 
 <header class="x-header">
     <div class="x-container">
-        <h1 class="x-header-title">Gonference</h1>
+        <a href="/" class="x-header-title">Gonference</a>
     </div>
 </header>
 
