--- a/src/web/templates/files/index.html
+++ b/src/web/templates/files/index.html
@@ -2,7 +2,7 @@
 
 <div class="x-talk-list">
     {{range .}}
-        <a class="x-talk-list-item" href="#">
+        <a class="x-talk-list-item" href="/talk/{{.ID}}">
 
             <div class="x-talk-list-item-arrow">
                 {{ template "icons/chevron-right" }}
@@ -21,3 +21,5 @@
 </div>
 
 {{end}}
+
+{{define "title"}}Talks{{end}}
