Working on talk view

--- a/src/front-style/src/components/_navbar.scss
+++ b/src/front-style/src/components/_navbar.scss
@@ -9,6 +9,9 @@
   &-title {
     margin: 0;
     text-align: center;
+    text-decoration: none;
+    font-size: 2em;
+    font-weight: bold;
     color: var(--header-text-color);
   }
 }
