--- a/src/front-style/src/main.scss
+++ b/src/front-style/src/main.scss
@@ -4,4 +4,5 @@
 @import "components/navbar";
 @import "components/body";
 @import "components/footer";
+@import "components/talk";
 @import "components/talk-list";
