--- a/src/web/templates/files/talk.html
+++ b/src/web/templates/files/talk.html
@@ -1,6 +1,21 @@
 {{define "content"}}
-    <h1>{{.Name}}</h1>
-    <p>{{.Description}}</p>
+
+    <div class="x-talk">
+        <section class="x-talk-section is-boxed">
+            <h1 class="x-talk-title">{{.Name}}</h1>
+            <div class="x-talk-info">
+                <span class="x-talk-track">{{.Track}}</span>
+                <span class="x-talk-when">{{.When.Format "15:04"}}</span>
+            </div>
+            <div class="x-talk-description">{{.Description}}</div>
+        </section>
+
+        <section class="x-talk-section x-talk-speaker">
+            <span class="x-talk-speaker-name">{{.SpeakerName}}</span>
+            <span class="x-talk-speaker-title">{{.SpeakerTitle}}</span>
+        </section>
+    </div>
+
 {{end}}
 
 {{define "title"}}Talk - {{.Name}}{{end}}
