--- a/src/front-style/src/components/_talk.scss
+++ b/src/front-style/src/components/_talk.scss
@@ -38,8 +38,12 @@
 
   &-description {
     line-height: 1.4em;
-    margin: 10px 0 0 0;
+    margin: 0;
     color: #333;
+
+    p {
+      margin: 10px 0 0 0;
+    }
   }
 
   &-speaker {
