--- a/src/front-style/src/components/_talk.scss
+++ b/src/front-style/src/components/_talk.scss
@@ -47,6 +47,22 @@
   }
 
   &-speaker {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-info {
+      flex-grow: 1;
+    }
+    &-image {
+      flex-shrink: 0;
+      flex-grow: 0;
+      width: 100px;
+      height: 100px;
+      margin-right: 1em;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
     &-name {
       display: block;
       font-size: 1.4em;
