--- a/src/front-style/src/components/_talk.scss
+++ b/src/front-style/src/components/_talk.scss
@@ -8,6 +8,13 @@
     &.is-boxed {
       background-color: white;
     }
+
+    &-title {
+      font-size: 1.3em;
+      color: #542836;
+      margin: 0 0 .7em 0;
+      font-weight: normal;
+    }
   }
 
   &-title {
@@ -76,5 +83,34 @@
       line-height: 1.42;
       color: var(--color-primary);
     }
+  }
+
+  &-textarea {
+    display: block;
+    margin: auto;
+    width: 100%;
+    max-width: 300px;
+    resize: none;
+    height: 150px;
+    border-color: rgba(0, 0, 0, 0.1);
+    border-style: solid;
+    border-width: 1px;
+    font-size: 1.2em;
+    padding: 15px;
+  }
+
+  &-button {
+    appearance: none;
+    -moz-appearance: none;
+    width: 100%;
+    max-width: 300px;
+    margin: 10px auto;
+    display: block;
+    font-size: 1.3em;
+    background-color: #d09c2e;
+    color: white;
+    border: none;
+    padding: .4em;
+    cursor: pointer;
   }
 }
