--- a/src/app/resources/templates/talk.html
+++ b/src/app/resources/templates/talk.html
@@ -28,14 +28,19 @@
             </form>
         </section>
 
-        <section class="x-talk-section is-boxed">
-            <h2 class="x-talk-section-title">Valora la charla</h2>
-            <form action="/talk/{{.talk.ID}}/rating" method="POST" enctype="multipart/form-data">
-                {{ template "components/stars" }}
-                <textarea class="x-talk-textarea" name="comment" maxlength="600" placeholder="Deja un comentario... si lo ves oportuno :)"></textarea>
-                <input class="x-talk-button" type="submit" value="Enviar">
-            </form>
-        </section>
+        {{if .ratingDone}}
+            <span>Thanks for the rating</span>
+        {{else}}
+            <section class="x-talk-section is-boxed">
+                <h2 class="x-talk-section-title">Valora la charla</h2>
+                <form action="/talk/{{.talk.ID}}/rating" method="POST" enctype="multipart/form-data">
+                    {{ template "components/stars" }}
+                    <textarea class="x-talk-textarea" name="comment" maxlength="600" placeholder="Deja un comentario... si lo ves oportuno :)"></textarea>
+                    <input class="x-talk-button" type="submit" value="Enviar">
+                </form>
+            </section>
+        {{end}}
+
     </div>
 
 {{end}}
