--- a/src/front-style/src/components/_talk.scss
+++ b/src/front-style/src/components/_talk.scss
@@ -1,5 +1,5 @@
 .x-talk {
-  margin: 0px 10px;
+  margin: 0 10px;
 
   &-section {
     padding: 15px;
@@ -112,5 +112,22 @@
     border: none;
     padding: .4em;
     cursor: pointer;
+  }
+
+  &-notification {
+    padding: 15px;
+    margin-top: 10px;
+    background-color: var(--color-accent);
+    color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    svg {
+      width: 20px;
+      height: 20px;
+      fill: white;
+      margin-right: 10px;
+    }
   }
 }
