Questions back and front. Custom static folder.

--- a/src/app/resources/templates/_layout.html
+++ b/src/app/resources/templates/_layout.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{template "title" .}}</title>
     <meta charset="utf8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
