Custom meta html.

--- a/src/app/resources/templates/_layout.html
+++ b/src/app/resources/templates/_layout.html
@@ -2,10 +2,12 @@
 
 <html>
 <head>
+    {{ custom_meta }}
     <title>{{template "title" .}}</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/assets/style.css">
+    {{ custom_meta_post }}
 </head>
 <body>
 
