--- a/src/front-style/src/components/_talk-list.scss
+++ b/src/front-style/src/components/_talk-list.scss
@@ -12,6 +12,29 @@
       margin: 0 0 .4em 0;
       color: var(--color-primary);
       font-size: 1.3em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      svg {
+        width: 12px;
+        height: 12px;
+        background-color: var(--color-accent);
+        vertical-align: middle;
+        padding: 4px;
+        flex-shrink: 0;
+        margin-right: .3em;
+        fill: white;
+      }
+
+      span {
+        vertical-align: middle;
+        flex-grow: 1;
+      }
+    }
+
+    &.is-rated &-title span {
+      opacity: .7;
     }
 
     &-info {
