--- a/src/front-style/src/components/_talk.scss
+++ b/src/front-style/src/components/_talk.scss
@@ -15,6 +15,11 @@
       margin: 0 0 .7em 0;
       font-weight: normal;
     }
+
+    &-advice {
+      opacity: .5;
+      font-size: .9em;
+    }
   }
 
   &-title {
@@ -128,6 +133,77 @@
       height: 20px;
       fill: white;
       margin-right: 10px;
+    }
+  }
+
+  &-average {
+    font-size: 2em;
+
+    &-value {
+      font-size: 1.5em;
+    }
+
+    &-max {
+      opacity: .6;
+    }
+  }
+
+  &-rating {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+
+    &-stars {
+      margin-right: 15px;
+      display: flex;
+
+      $line-height: 15px;
+
+      &-numbers {
+        display: flex;
+        flex-direction: column;
+
+        span {
+          font-size: $line-height;
+          line-height: 1em;
+          text-align: right;
+        }
+      }
+
+      &-bars {
+        margin-left: 2px;
+        div {
+          display: flex;
+          margin-left: 3px;
+          height: $line-height;
+          svg {
+            width: 10px;
+            fill: var(--color-accent);
+            margin-right: 2px;
+          }
+        }
+      }
+
+    }
+  }
+
+  &-comment {
+    background-color: rgba(0,0,0,0.01);
+    margin-top: 15px;
+    padding: 10px;
+    p {
+      margin: 0;
+    }
+
+    &-stars {
+      font-size: 14px;
+      display: inline-flex;
+      svg {
+        margin-left: 2px;
+        width: 12px;
+        fill: var(--color-accent);
+      }
     }
   }
 }
