--- a/src/app/resources/templates/_layout.html
+++ b/src/app/resources/templates/_layout.html
@@ -6,6 +6,7 @@
     <title>{{template "title" .}}</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    {{template "meta" .}}
     <link rel="stylesheet" href="/assets/style.css">
     {{ custom_meta_post }}
 </head>
