Extend login tests

--- a/src/front-style/src/main.scss
+++ b/src/front-style/src/main.scss
@@ -3,6 +3,7 @@
 @import "components/container";
 @import "components/navbar";
 @import "components/body";
+@import "components/login";
 @import "components/footer";
 @import "components/stars";
 @import "components/talk";
