--- a/src/app/resources/templates/login.html
+++ b/src/app/resources/templates/login.html
@@ -1,7 +1,10 @@
 {{define "content"}}
 
 <h1>Login</h1>
-<form  method="post">
+{{if .data.wrong}}
+    <p class="x-login-error">Wrong credentials</p>
+{{end}}
+<form method="post">
     <label for="username">Username</label>
     <input type="text" id="username" name="username">
     <br>
